fix missing background image

--- a/app/assets/stylesheets/body.css.less
+++ b/app/assets/stylesheets/body.css.less
@@ -1,3 +1,3 @@
 body {
-  background: #d4d4d4 url("/images/background.png");
+  background: #d4d4d4 url("/assets/background.png");
 }
